--- a/config-postgresql.yml
+++ b/config-postgresql.yml
@@ -1,3 +1,3 @@
 - hosts: POSTGRESQL_DATABASES
   roles:
-  - { role: anxs.postgresql, become: yes }
+  - { role: geerlingguy.postgresql, become: yes }
