Add prod domain

--- a/roles/echaloasuerte-3/defaults/main.yml
+++ b/roles/echaloasuerte-3/defaults/main.yml
@@ -21,6 +21,8 @@ echaloasuerte_3_domains:
   - "chooserandom.com"
   - "dev.echaloasuerte.com"
   - "dev.chooserandom.com"
+  - "prod.echaloasuerte.com"
+  - "prod.chooserandom.com"
   - "www.echaloasuerte.com"
   - "www.chooserandom.com"
   - "mobile.echaloasuerte.com"
