--- a/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
+++ b/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
@@ -26,6 +26,7 @@ chmod-socket = 664
 vacuum = true
 
 max-worker-lifetime = 360000
+max-worker-lifetime-delta = 3600
 
 env = DJANGO_SETTINGS_MODULE={{ echaloasuerte_3_app_settings }}
 env = SENTRY_DSN={{ sentry_dsn }}
