--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,16 +5,19 @@ on:
       tags:
         description: 'Ansible playbook tags'
         required: true
+  push:
+    branches:
+      - master
 jobs:
   generate-vars:
     runs-on: ubuntu-latest
     outputs:
       ansible_hosts: '${{steps.set_vars.outputs.hosts_file}}'
+      ansible_tags: '${{steps.set_vars.outputs.tags}}'
     steps:
       - name: Set vars
         id: set_vars
         run: |
-          echo "Deploying from branch: ${{github.ref}}"
           if [[ "${{github.ref}}" == "refs/heads/prod" ]]; then
               echo "::set-output name=hosts_file::environments/prod/hosts"
           elif [[ "${{github.ref}}" == "refs/heads/master" ]]; then
@@ -23,13 +26,23 @@ jobs:
               echo "BRANCH NOT SUPPORTED: ${{github.ref}}"
               exit 1
           fi
-          echo "Deployment for tags: ${{ github.event.inputs.tags }}"
+          if [[ "${{github.event_name}}" == "push" ]]; then
+              echo "::set-output name=tags::all"
+          else
+              echo "::set-output name=tags::${{ github.event.inputs.tags }}"
+          fi
+
 
   deploy:
     runs-on: ubuntu-latest
     needs:
       - generate-vars
     steps:
+      - name: Show deployment branch and tags
+        run: |
+          echo "Deploying from branch: ${{github.ref}}"
+          echo "Deployment for tags: ${{ needs.generate-vars.outputs.ansible_tags }}"
+
       - uses: actions/checkout@v2
         with:
           submodules: true
@@ -64,7 +77,7 @@ jobs:
         run: |
           ansible-playbook -i ${{ needs.generate-vars.outputs.ansible_hosts }} config-eas3.yml \
             --vault-password-file .ansible-vault-password \
-            --tags "${{ github.event.inputs.tags }}" \
+            --tags "${{ needs.generate-vars.outputs.ansible_tags }}" \
             --extra-vars "ansible_user=automation"
         env:
           ANSIBLE_HOST_KEY_CHECKING: 'False'
