Limit target hosts in config-users.yml

--- a/config-users.yml
+++ b/config-users.yml
@@ -1,3 +1,6 @@
-- hosts: all
+- hosts:
+  - ECHALOASUERTE
+  - POSTGRESQL_DATABASES
+  - MONGO_DATABASES
   roles:
   - { role: users, become: true }
