--- a/roles/echaloasuerte-3/handlers/main.yml
+++ b/roles/echaloasuerte-3/handlers/main.yml
@@ -5,6 +5,12 @@
     sleep: 5
   become: yes
 
+- name: restart celery worker
+  service:
+    name: echaloasuerte-celery-task
+    starte restarted
+  become: yes
+
 - name: restart all uwsgi
   service:
     name: uwsgi{{ item }}
