WIP temp branch

--- a/roles/echaloasuerte-3/tasks/main.yml
+++ b/roles/echaloasuerte-3/tasks/main.yml
@@ -21,6 +21,7 @@
     update: yes
     accept_hostkey: yes
     force: yes
+    version: "pedro/async-emails"
   become: yes
   become_user: www-data
   tags:
