block some referrers

--- a/roles/echaloasuerte-3/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte-3/templates/echaloasuerte-nginx.conf
@@ -24,6 +24,11 @@ set_real_ip_from 2a06:98c0::/29;
 
 real_ip_header CF-Connecting-IP;
 
+map $http_referer $bad_referer {
+    default                  0;
+    "~gerenimot.fr"          1;
+}
+
 # Limit IPs except localhost and server's IP
 geo $limited_ip {
     default      1;
@@ -52,6 +57,11 @@ upstream old-backend-frontend {
 server {
     listen 80;
     server_name {% for item in echaloasuerte_3_domains %} {{ item }} {% endfor %};
+
+    if ($bad_referer) {
+        return 444;
+    }
+
 
     rewrite ^/draw/new/groups/?$ /groups permanent;
     rewrite ^/draw/new/groups/shared/?$ /groups/public permanent;
