Use 'inventory_hostname' for hostname
This is now possible given we are using hostnames in
the inventory file. Otherwise this variable will just
be the IP address.

--- a/roles/users/tasks/main.yml
+++ b/roles/users/tasks/main.yml
@@ -32,5 +32,4 @@
   - restart ssh
 
 - hostname:
-    name: "{{ node_hostname }}"
-  when: node_hostname is defined
+    name: "{{ inventory_hostname }}"
