--- a/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
+++ b/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
@@ -33,3 +33,4 @@ env = SENTRY_DSN={{ sentry_dsn }}
 env = ECHALOASUERTE_LOGS_PATH={{ echaloasuerte_3_logs }}
 env = EAS_PAYPAL_SECRET={{ eas_ppal_token }}
 env = EAS_AWS_KEY_SECRET={{ aws_producer_key_secret }}
+env = EAS_INSTAGRAM_PASSWORD={{ instagram_password }}
