Add env var for ig cache file location

--- a/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
+++ b/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
@@ -34,3 +34,4 @@ env = ECHALOASUERTE_LOGS_PATH={{ echaloasuerte_3_logs }}
 env = EAS_PAYPAL_SECRET={{ eas_ppal_token }}
 env = EAS_AWS_KEY_SECRET={{ aws_producer_key_secret }}
 env = EAS_INSTAGRAM_PASSWORD={{ instagram_password }}
+env = EAS_INSTAGRAM_CACHE_FILE={{ eas_ig_cache_file }}
