--- a/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
+++ b/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
@@ -34,7 +34,5 @@ env = ECHALOASUERTE_LOGS_PATH={{ echaloasuerte_3_logs }}
 env = EAS_PAYPAL_SECRET={{ eas_ppal_token }}
 env = EAS_AWS_KEY_SECRET={{ aws_producer_key_secret }}
 
-env = EAS_INSTAGRAM_EMAIL_USERNAME={{ instagram_email_username }}
-env = EAS_INSTAGRAM_EMAIL_PASSWORD={{ instagram_email_password }}
-env = EAS_INSTAGRAM_PASSWORD_FILE={{ echaloasuerte_3_root }}/eas-instagram.pass
+env = EAS_DATALAMA_APIK={{ datalama_token }}
 env = EAS_INSTAGRAM_CACHE_FILE={{ echaloasuerte_3_root }}/eas-instagram-cache.pickle
