Send /api/bff to the forntend

--- a/roles/echaloasuerte-3/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte-3/templates/echaloasuerte-nginx.conf
@@ -88,6 +88,12 @@ server {
         proxy_pass http://old-backend-frontend;
     }
 
+    location /api/bff {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_pass http://localhost:8081;
+    }
+
     location /api {
         limit_req zone=apilimit burst=20;
         include         uwsgi_params;
