Update actions to fix CI warnings
Those actions were using deprecated Node 12

--- a/.github/workflows/sync-db.yml
+++ b/.github/workflows/sync-db.yml
@@ -3,21 +3,19 @@ on:
   schedule:
     - cron: '*/30 * * * *' # Every minute 0 (every hour)
 
+concurrency:
+  group: sync-database
+
 jobs:
   sync-db:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           submodules: true
 
-      - name: Turnstyle
-        uses: softprops/turnstyle@8db075d65b19bf94e6e8687b504db69938dc3c65
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Set up Python 3.9
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v4
         with:
           python-version: 3.9
 
@@ -33,7 +31,7 @@ jobs:
           echo "$ANSIBLE_VAULT_PASSWORD" > .ansible-vault-password
 
       - name: Load ssh key
-        uses: webfactory/ssh-agent@v0.4.1
+        uses: webfactory/ssh-agent@v0.7.0
         with:
           ssh-private-key: ${{ secrets.AUTOMATION_SSH_KEY }}
 
