Add EAS_LAMADAVA_APIK environment variable

--- a/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
+++ b/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
@@ -35,4 +35,5 @@ env = EAS_PAYPAL_SECRET={{ eas_ppal_token }}
 env = EAS_AWS_KEY_SECRET={{ aws_producer_key_secret }}
 
 env = EAS_DATALAMA_APIK={{ datalama_token }}
+env = EAS_LAMADAVA_APIK={{ lamadava_token }}
 env = EAS_INSTAGRAM_CACHE_FILE={{ echaloasuerte_3_root }}/eas-instagram-cache.pickle
