--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,10 @@ on:
     branches:
       - master
       - prod
+
+concurrency:
+  group: ${{ github.ref }}
+
 jobs:
   generate-vars:
     runs-on: ubuntu-latest
@@ -47,11 +51,6 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: true
-
-      - name: Turnstyle
-        uses: softprops/turnstyle@8db075d65b19bf94e6e8687b504db69938dc3c65
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python 3.9
         uses: actions/setup-python@v4
