Recover access to logz.io

--- a/roles/monitoring/templates/filebeat.yml
+++ b/roles/monitoring/templates/filebeat.yml
@@ -240,6 +240,6 @@ filebeat.registry_file: /var/lib/filebeat/registry
 
 output:
   logstash:
-    hosts: ["listener-uk.logz.io:5015"]
+    hosts: ["listener.logz.io:5015"]
     ssl:
       certificate_authorities: ['/etc/filebeat/COMODORSADomainValidationSecureServerCA.crt']
