--- a/roles/echaloasuerte-3/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte-3/templates/echaloasuerte-nginx.conf
@@ -19,8 +19,8 @@ set_real_ip_from 2606:4700::/32;
 set_real_ip_from 2803:f800::/32;
 set_real_ip_from 2405:b500::/32;
 set_real_ip_from 2405:8100::/32;
-set_real_ip_from 2c0f:f248::/32;
 set_real_ip_from 2a06:98c0::/29;
+set_real_ip_from 2c0f:f248::/32;
 
 real_ip_header CF-Connecting-IP;
 
@@ -73,6 +73,7 @@ server {
     rewrite ^/draw/new/dice/?$ /dice permanent;
     rewrite ^/draw/new/item/?$ /item permanent;
     rewrite ^/draw/new/link_sets/?$ /sets permanent;
+    rewrite ^/draw/new/tournament/?$ /tournament permanent;
 
     uwsgi_read_timeout 60;
     uwsgi_send_timeout 60;
