--- a/roles/monitoring/templates/filebeat.yml
+++ b/roles/monitoring/templates/filebeat.yml
@@ -230,7 +230,7 @@ filebeat.inputs:
     env: {{ filebeat_env }}
   fields_under_root: true
   exclude_lines:
-    - '[echaloasuerte] Found'
+    - '.*[echaloasuerte] Found'
   encoding: utf-8
   ignore_older: 3h
 
