--- a/roles/nginx/tasks/uwsgi.yml
+++ b/roles/nginx/tasks/uwsgi.yml
@@ -38,11 +38,13 @@
     creates: "{{ uwsgi_build_dir }}/python3_plugin.so"
   become: yes
 
-- name: Build python2 plugin
-  command:
-    cmd: python2 uwsgiconfig.py --plugin plugins/python nolang python2
-    chdir: "{{ uwsgi_build_dir }}"
-    creates: "{{ uwsgi_build_dir }}/python2_plugin.so"
+- name: Delete python2 plugin
+  file:
+    path: "{{ item }}"
+    state: absent
+  with_items:
+    - "{{ uwsgi_build_dir }}/python2_plugin.so"
+    - "{{ uwsgi_plugins_dir }}/python2_plugin.so"
   become: yes
 
 - name: Create uwsgi dirs
@@ -63,7 +65,6 @@
     mode: 0755
   with_items:
     - { name: 'uwsgi', dest: "{{ uwsgi_bin_dir }}" }
-    - { name: 'python2_plugin.so', dest: "{{ uwsgi_plugins_dir }}" }
     - { name: 'python3_plugin.so', dest: "{{ uwsgi_plugins_dir }}" }
   become: yes
   notify:
