--- a/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
+++ b/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
@@ -36,4 +36,5 @@ env = EAS_AWS_KEY_SECRET={{ aws_producer_key_secret }}
 
 env = EAS_DATALAMA_APIK={{ datalama_token }}
 env = EAS_LAMADAVA_APIK={{ lamadava_token }}
+env = EAS_LAMATOK_APIK={{ lamatok_token }}
 env = EAS_INSTAGRAM_CACHE_FILE={{ echaloasuerte_3_root }}/eas-instagram-cache.pickle
