--- a/roles/echaloasuerte-3/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte-3/templates/echaloasuerte-nginx.conf
@@ -43,6 +43,8 @@ map $limited_ip $limited_ip_key {
 }
 
 limit_req_zone $limited_ip_key zone=apilimit:10m rate=10r/s;
+limit_req_zone $limited_ip_key zone=secret_santa_s:10m rate=2r/s;
+limit_req_zone $limited_ip_key zone=secret_santa_m:10m rate=10r/m;
 
 
 upstream backend-{{ echaloasuerte_3_app_name }}  {
@@ -78,6 +80,13 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
         proxy_pass http://localhost:8081;
+    }
+
+    location ~* ^/api/secret-santa/?$ {
+        limit_req zone=secret_santa_s;
+        limit_req zone=secret_santa_m;
+        include         uwsgi_params;
+        uwsgi_pass      backend-{{ echaloasuerte_3_app_name }};
     }
 
     location /api {
