--- a/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
+++ b/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
@@ -33,6 +33,7 @@ env = SENTRY_DSN={{ sentry_dsn }}
 env = ECHALOASUERTE_LOGS_PATH={{ echaloasuerte_3_logs }}
 env = EAS_PAYPAL_SECRET={{ eas_ppal_token }}
 env = EAS_AWS_KEY_SECRET={{ aws_producer_key_secret }}
+env = EAS_REVOLUT_SECRET={{ eas_revo_token }}
 
 env = EAS_DATALAMA_APIK={{ datalama_token }}
 env = EAS_LAMADAVA_APIK={{ lamadava_token }}
