Create stripe token

--- a/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
+++ b/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
@@ -34,6 +34,7 @@ env = ECHALOASUERTE_LOGS_PATH={{ echaloasuerte_3_logs }}
 env = EAS_PAYPAL_SECRET={{ eas_ppal_token }}
 env = EAS_AWS_KEY_SECRET={{ aws_producer_key_secret }}
 env = EAS_REVOLUT_SECRET={{ eas_revo_token }}
+env = EAS_STRIPE_API_KEY={{ eas_stripe_token }}
 
 env = EAS_DATALAMA_APIK={{ datalama_token }}
 env = EAS_LAMADAVA_APIK={{ lamadava_token }}
